--- a/index.html
+++ b/index.html
@@ -93,8 +93,7 @@
   </style>
 
   <script>
-    // URL para redirecionar após bloqueio
-    const redirecionarPara = "https://exemplo.com/404";
+    const redirecionarPara = "https://google.com/404";
 
     const isModoDev = () => new URLSearchParams(window.location.search).get('dev') === 'true';
 
